# e2e-test-for-next-client

./: pyproject.toml
features/: create_user.feature  environment.py  login.feature
features/steps/: create_user_steps.py  login_steps.py  singup_steps.py
pages/: create_user_page.py
