[tool.poetry]
name = "e2e-test-for-next-client"
version = "0.1.0"
description = ""
authors = ["uaipedro <pedromambelli@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
behave = "^1.2.6"
selenium = "^4.16.0"
webdriver-manager = "^4.0.1"
ipdb = "^0.13.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
